style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');

* {
  box-sizing: border-box;
  font-family: "Montserrat", sans-serif;
  margin: 0;
  padding: 0;
}

body {
  background-color: #f8f9fa;
}

a {
  text-decoration: none;
  color: inherit;
}

li {
  list-style: none;
}


img {
  max-width: 100%;
  display: block;
  height: auto;
}

html {
  scroll-behavior: smooth;
}

button {
  background-color: transparent;
  border: 2px solid #FFD700;
  padding: 5px 20px;
  color: #151515;
  border-radius: 30px;
  cursor: pointer;
  transition: all 0.5s;
  font-weight: 600;
  font-size: 17px;
}

button:hover {
  background-color: #aaabac6c;
}

.container {
  width: 90%;
  margin: 0 auto;
  max-width: 1450px;
}

.section-title {
  font-size: 18px;
  width: 100%;
  text-align: center;
  margin-bottom: 2rem;
}
.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgb(70, 70, 70);
  z-index: 999;
  opacity: 1;
  transition: opacity 0.5s ease;
}

.loader {
  position: fixed;
  display: block;
  width: 48px;
  height: 48px;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 1000;
}

.loader:before {
  content: '';
  width: 48px;
  height: 5px;
  background: #000;
  opacity: 0.25;
  position: absolute;
  top: 60px;
  left: 0;
  border-radius: 50%;
  animation: shadow 0.5s linear infinite;
  z-index: 1000;
}

.loader:after {
  content: '';
  width: 100%;
  height: 100%;
  background: #FFD700;
  animation: bxSpin 0.5s linear infinite;
  position: absolute;
  top: 0;
  left: 0;
  border-radius: 4px;
}

@keyframes bxSpin {
  17% {
    border-bottom-right-radius: 3px;
  }
  25% {
    transform: translateY(9px) rotate(22.5deg);
  }
  50% {
    transform: translateY(18px) scale(1, .9) rotate(45deg);
    border-bottom-right-radius: 40px;
  }
  75% {
    transform: translateY(9px) rotate(67.5deg);
  }
  100% {
    transform: translateY(0) rotate(90deg);
  }
}

@keyframes shadow {
  0%, 100% {
    transform: scale(1, 1);
  }
  50% {
    transform: scale(1.2, 1);
  }
}


.header {
  width: 100%;
  height: 60px;
  background-color: transparent;
  display: none;
  position: sticky;
  z-index: 9999;
  top: 0;

}

.header.sticky {
  background-color: rgba(255, 255, 255, 0.4);
  backdrop-filter: blur(10px);
  transition: all 0.5s ease;
}

.navbar {
  display: flex;
  align-items: center;
  justify-content: center;
}

.navbar button {
  padding: 0;
  background-color: transparent;
  border-radius: 0;
  outline: none;
}

.nav-menu {
  display: flex;
  gap: 30px;
  font-size: 12px;
  z-index: 99;
}

.activecolor {
  color: #FFD700;
}

.nav-menu li a {
  font-size: 16px;
  font-weight: 600;
  position: relative;
  padding-bottom: 2px;
}

.nav-menu li a::before {
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  width: 0;
  height: 2px;
  background-color: #FFD700;
  transition: width 0.4s ease;
}

.nav-menu li a:hover::before {
  width: 100%;
}

.hamburger span {
  background-color: #212529;
  display: block;
  width: 25px;
  height: 3px;
  margin: 5px 0;
  transition: all 0.3s ease-in-out;
}

.hamburger {
  display: none;
  z-index: 999;
}

@media only screen and (max-width: 768px) {

  .hamburger {
    display: block;
  }

  .nav-menu {
    position: fixed;
    top: 0;
    right: 0;
    width: 100%;
    height: 100%;
    flex-direction: column;
    align-items: center;
    background-color: #212529;
    color: white;
    z-index: 998;
    gap: 3rem;
    padding: 20px 0;
    justify-content: center;
    left: -100%;
    transition: left 0.3s ease;
  }

  .navbar button {
    background-color: rgba(255, 255, 255, 0.4);
    backdrop-filter: blur(10px);
    padding: 5% 8% 5% 100%;
    border: none;
}

  .nav-menu.active {
    left: 0;
  }

  .hamburger.active .bar:nth-child(2) {
    opacity: 0;
  }

  .hamburger.active .bar:nth-child(1) {
    transform: translateY(10px) rotate(45deg);
    background-color: #fff;
  }

  .hamburger.active .bar:nth-child(3) {
    transform: translateY(-6px) rotate(-45deg);
    background-color: #fff;
  }

}

#home {
  background-image: url('img/hero-background.jpg');
  background-size: cover;
  width: 100%;
  background-position: bottom;
}

.hero {
  height: 110vh;
  padding: 4rem 0;
  gap: 5rem;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: -4rem;
}

.hero-info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 70%;
  height: 70%;
  background-color: rgba(226, 226, 226, 0.5);
  backdrop-filter: blur(2px);
  border-radius: 20px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
  text-align: center;
}

.hero-info h2 {
  font-size: 70px;
  font-weight: 800;
  padding-bottom: 10px;
}

.hero-info span {
  font-size: 20px;
  font-weight: bold;
  color: #46484b;
}

.hero-info p {
  padding-top: 15px;
  margin: 10px 20px;
  font-size: 15px;
  font-weight: 600;
}

.hero-buttons {
  align-items: center;
  margin-top: 15px;
  display: flex;
  gap: 1rem;
  justify-content: center;
}

.hero-buttons i {
  padding-left: 7px;
  transition: color 0.3s ease; 
}

#resume-btn:hover i,
#contact-btn:hover i {
  color: #FFD700;
}


.icon {
  content: url('img/AC_ICON.svg');
  height: 30px;
  width: 30px;
  margin-left: -5px;
  padding-top: 5px;
}

.icon:hover {
  filter: invert(82%) sepia(27%) saturate(2174%) hue-rotate(360deg) brightness(103%) contrast(103%);
}

.socials {
  display: flex;
  gap: 15px;
  justify-content: center;
  margin-top: 15px;
  padding-bottom: 15px;
  font-size: 23px;
  align-items: center;
}

.socials a:hover {
  color: #FFD700;
}

@media only screen and (max-width: 768px) {
  .hero {
    height: 100vh;
    padding: 4rem 0;
    text-align: center;
  }

  .hero-buttons {
    justify-content: center;
  }
  .hero-info {
    width: 100%;
    height: 92%;
  }
}
/* ... */

